@@ -30,6 +30,7 @@ Mark Reinhold <mr@sun.com>
 Bernhard Rosenkränzer <bero@arklinux.org>
 Marc Schoenefeld <mschoene@redhat.com>
 Keith Seitz <keiths@redhat.com>
+Yasumasa Suenaga  <yasuenag@gmail.com>
 Joshua Sumali <jsumali@redhat.com>
 Pavel Tisnovsky <ptisnovs@redhat.com>
 Christian Thalinger <twisti@complang.tuwien.ac.at>
