@@ -36,6 +36,7 @@ New in release 3.0.0 (2014-XX-XX):
   - PR1806: Support Debian/Ubuntu 7 & 8 OpenJDK Installs as Boot JDK
   - PR1812: Unable to locate HotSpot checksum when downloading
   - PR1813: HotSpot URL should be used with --enable-hg
+  - PR1845: jstack.stp in OpenJDK8 is broken
   - PR1935: HotSpot extraction needs to depend on the tarball being downloaded
   - Don't substitute 'j' for '-j' inside -I directives
   - Extend 8041658 to all files in the HotSpot build.
